--- a/view/css/simple.css
+++ b/view/css/simple.css
@@ -168,9 +168,10 @@ pre{
 /*..............VIEW-PROFILE..................*/
 
 #viewprofile li{
-	width: 100%;
+	width: 60%;
 	margin: 15px auto;
 	font-size: 19px;
+	word-wrap: break-word;
 }
 
 .div-profile .div-canvas {
@@ -180,8 +181,8 @@ pre{
 }
 .div-profile .div-ul
 {
-	width: 70%;
-	height: 70%;
+	width: 100%;
+	height: 100%;
 	margin-top: 40px;
 }
 
