--- a/view/css/simple.css
+++ b/view/css/simple.css
@@ -13,12 +13,19 @@ pre{
     background: none;
 }
 
+ul{
+    list-style-type: none;
+}
+
+
 .wrapper{
     padding-top: 50px;
     width: 100%;
     min-height: 100%;
     margin-bottom: -100px;
 }
+
+
 
 /*........HEADER..................*/
 
@@ -232,6 +239,62 @@ pre{
 #viewprofile .problem-block a{
 	margin: 3px 3px;
 	font-size: 14px; 
+}
+
+
+/*..................STATISTICS......................*/
+#statistics .problem-rank h2{
+    text-align: center;
+    font-family:monospace;
+    color: #2F7DDB;
+}
+
+#statistics  .div-canvas{
+    margin-top: 50px;
+}
+
+#statistics  #canvas{
+	width:100%;
+	height:100%;
+}
+
+#statistics .data h3{
+    text-align: center;
+}
+
+#statistics .data ul li{
+    color: #B01414;
+    font-size: 20px;
+    margin-left: 30%;
+}
+
+/*.................DISCUSS................................*/
+#discuss .discuss-header h2{
+    text-align: center;
+    font-family:monospace;
+    color: #2F7DDB;
+}
+
+#discuss .discuss-body{
+    background-color: #F8F8F8;
+    padding: 40px 40px 40px 0px;
+    font-size: 16px;
+    color: #77778F;
+}
+
+#discuss .discuss-body .content{
+    color: #2F7DDB;
+}
+
+
+#discuss .discuss-body .username a{
+    color: black;
+    font-size: 14px;
+    font-weight: bolder;
+}
+
+#discuss .discuss-body .time{
+    font-size: 14px;
 }
 
 
